<?xml version="1.0"?>
<package format="2">
  <name>robowflex_ompl</name>
  <version>0.1.0</version>
  <description>Robowflex: Direct OMPL Planning Interface</description>

  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>robowflex_library</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ompl_planning_interface</depend>
</package>
