<?xml version="1.0"?>
<package format="2">
  <name>robowflex_tesseract</name>
  <version>0.0.1</version>
  <description>The Better Benchmarking Package: Tesseract Interface</description>
  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="bryce.steven.willey@gmail.com">Bryce Willey</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>robowflex_library</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>tesseract_planning</depend>
  <depend>tesseract_ros</depend>
</package>
