<?xml version="1.0"?>
<package format="2">
  <name>robowflex_tesseract</name>
  <version>1.3.0</version>
  <description>Robowflex: ROS Industrial Tesseract Interface</description>

  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="bryce.steven.willey@gmail.com">Bryce Willey</author>
  <author email="carlosq@rice.edu">Carlos Quintero Pena</author>

  <license>BSD</license>
  <url type="bugtracker">https://github.com/KavrakiLab/robowflex/issues</url>
  <url type="repository">https://github.com/KavrakiLab/robowflex</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>robowflex_library</depend>
  <depend>tesseract_planning</depend>
  <depend>tesseract_ros</depend>
</package>
