<?xml version="1.0"?>
<package format="2">
  <name>robowflex_util</name>
  <version>1.3.0</version>
  <description>Robowflex Utilities</description>

  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>

  <license>BSD</license>
  <url type="bugtracker">https://github.com/KavrakiLab/robowflex/issues</url>
  <url type="repository">https://github.com/KavrakiLab/robowflex</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <!-- <depend>boost</depend>
       <depend>yaml-cpp</depend>
       <depend>tinyxml2</depend>
       <depend>eigen</depend>
       <depend>hdf5</depend> -->
</package>
