<?xml version="1.0"?>
<package format="2">
  <name>robowflex_visualization</name>
  <version>0.1.0</version>
  <description>Robowflex: Blender Visualization</description>

  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>
  <author email="bryce.steven.willey@gmail.com">Bryce Willey</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>robowflex_library</depend>
  <depend>rospy</depend>
  <depend>collada_urdf</depend>
</package>
