<?xml version="1.0"?>
<package format="2">
  <name>tmpack</name>
  <version>0.0.1</version>
  <description>TMPack</description>
  <maintainer email="zak@rice.edu">Zachary Kingston</maintainer>
  <author email="zak@rice.edu">Zachary Kingston</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>robowflex_library</depend>


  <export>
  </export>
</package>
