<?xml version="1.0"?>
<package format="2">
  <name>tmpack</name>
  <version>0.0.1</version>
  <description>TMPack</description>
  <maintainer email="andrew.wells@rice.edu">Andrew Wells</maintainer>
  <author email="andrew.wells@rice.edu">Andrew Wells</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>robowflex_library</depend>
  <depend>gflags</depend>

</package>
